# Structured-Programming

./: CMakeLists.txt  README.md
semester1/: 3lab1.cpp  3lab2.cpp  3lab3.cpp  3lab3func.cpp  4lab2.cpp  4lab2func.cpp  4lab3.cpp  5.zad10.cpp  5.zad6.cpp  5.zad7.cpp  5.zad8.cpp  5.zad9.cpp  aud6zad2.cpp  aud6zad3-.cpp  aud6zad3.cpp  aud6zad3.h  aud6zad4.cpp  binarenvodekaden.cpp  bvoa.cpp  ddmmyyyy.cpp  enkol2.cpp  enkol3.cpp  enkol4.cpp  enkol5.cpp  k1vezbi1.cpp  kispit2.cpp  kol10.cpp  kol11.cpp  kol12.cpp  kol13.cpp  kol2.cpp  kol3.cpp  kol4.cpp  kol5.cpp  kol6.cpp  kol7.cpp  kol8.cpp  kol9.cpp  lab1vavtor.cpp  lab6zad6.cpp  (+8 more)
semester1/II kol/: aud10zad1.cpp  aud10zad10.cpp  aud10zad2.cpp  aud10zad3.cpp  aud10zad4.cpp  aud10zad5.cpp  aud10zad6.cpp  aud10zad7.cpp  aud10zad8.cpp  aud10zad9.cpp  aud11zad1.cpp  aud11zad2.cpp  aud11zad3.cpp  aud12zad1.cpp  aud12zad2.cpp  aud12zad3.cpp  aud12zad4.cpp  aud12zad5.cpp  aud12zad5a.cpp  aud12zad6.cpp  aud12zad7.cpp  aud12zad8.cpp  aud8zad1.cpp  aud8zad2.cpp  aud8zad4.cpp  aud8zad5.cpp  aud8zad6.cpp  aud8zad7.cpp  aud8zad8.cpp  aud9zad1.cpp  aud9zad2.cpp  aud9zad3.cpp  aud9zad4.cpp  lab5.1.cpp  lab5.2.cpp  lab5.3.cpp  lab6.1.cpp  lab6.2.cpp  lab6.3.cpp  lab7zad1.cpp  (+10 more)
semester1/II kol/2col2023/: k1.cpp  k10.cpp  k11.cpp  k12.cpp  k2.cpp  k3.cpp  k3.h  k4.cpp  k5.cpp  k6.cpp  k8.cpp  k9.cpp
semester1/II kol/dopolnitelnikol2/: dop_1.cpp  dop_10.cpp  dop_11.cpp  dop_12.cpp  dop_2.cpp  dop_3.cpp  dop_4.cpp  dop_5.cpp  dop_6.cpp  dop_7.cpp  dop_8.cpp  dop_9.cpp
semester1/II kol/kolmk/: kolmk1.cpp  kolmk10.cpp  kolmk11.cpp  kolmk12.cpp  kolmk13.cpp  kolmk14.cpp  kolmk15.cpp  kolmk16.cpp  kolmk17.cpp  kolmk18.cpp  kolmk19.cpp  kolmk2.cpp  kolmk3.cpp  kolmk4.cpp  kolmk5.cpp  kolmk6.cpp  kolmk7.cpp  kolmk8.cpp  kolmk9.cpp
