cmake_minimum_required(VERSION 3.29)
project(auditoriski)

set(CMAKE_CXX_STANDARD 20)

#add_executable(auditoriski_main 5.zad7.cpp)
#add_executable(auditoriski_idk "semester1\;/5.zad8.cpp")
#add_executable(auditoriski_zad8 5.zad6.cpp)
#add_executable(auditoriski_zad9 "semester1\;/5.zad9.cpp")
#add_executable(auditoriski_labs2 labs2.1.cpp)
#add_executable(auditoriski_labs2.2 labs2.2.cpp)
#add_executable(auditoriski_labs2.3 labs2.3.cpp)
#add_executable(auditoriski_labava lab1vavtor.cpp)
#add_executable(auditoriski_ocenki uc_ocenki.cpp)
#add_executable(palindrom1 "semester1\;/palindrom.cpp")
#add_executable(auditoriskiday "semester1\;/ddmmyyyy.cpp")
#add_executable(auditoriskisodzi "semester1\;/sodrzi.cpp")
#add_executable(auditoriski10 "semester1\;/5.zad10.cpp")
#add_executable(auditoriskibvoa "semester1\;/bvoa.cpp")
#add_executable(auditoriskibvod "semester1\;/binarenvodekaden.cpp")
#add_executable(auditoriskilab3 "semester1\;/3lab1.cpp")
#add_executable(auditoriskilab32 "semester1\;/3lab2.cpp")
#add_executable(auditoriskilab33 "semester1\;/3lab3.cpp")
#add_executable(auditoriski6 "semester1\;/aud6zad2.cpp)
#add_executable(auditoriski63 "semester1\;/aud6zad3.cpp")
#add_executable(auditoriski63- "semester1\;/aud6zad3-.cpp")
#add_executable(auditoriski64 "semester1\;/aud6zad4.cpp")
#add_executable(auditoriski66 "semester1\;/lab6zad6.cpp")
#add_executable(kolokviumski1 "semester1\;/k1vezbi1.cpp")
#add_executable(kolokviumski12 "semester1\;/k1vezbi2.cpp")
#add_executable(kolokviumski2 "semester1\;/kol2.cpp")
#add_executable(kolokviumski3 "semester1\;/kol3.cpp")
#add_executable(kolokviumski5 "semester1\;/kol5.cpp")
#add_executable(kolokviumski6 "semester1\;/kol6.cpp")
#add_executable(kolokviumski7 "semester1\;/kol7.cpp")
#add_executable(kolokviumski8 "semester1\;/kol8.cpp")
#add_executable(kolokviumispit2 "semester1\;/kispit2.cpp")
#add_executable(kolokviumvtor1 "semester1\;/II kol/aud8zad1.cpp")
#add_executable(kolokviumvotor2 "semester1\;/II kol/aud8zad2.cpp")
#add_executable(kolokviumvtor4 "semester1\;/II kol/aud8zad4.cpp")
#add_executable(kolokviuumvtor5 "semester1\;/II kol/aud8zad5.cpp")
#add_executable(kolokviumvtor6 "semester1\;/II kol/aud8zad6.cpp")
#add_executable(kolokviumvtorlab51 "semester1\;/II kol/lab5.1.cpp")
#add_executable(kolokviumvtorlab52 "semester1\;/II kol/lab5.2.cpp")
#add_executable(kolokviumvtorlab53 "semester1\;/II kol/lab5.3.cpp")
#add_executable(kolokviumvtorlab61 "semester1\;/II kol/lab6.1.cpp")
#add_executable(kolokviumvtor101 "semester1\;/II kol/aud10zad1.cpp")
#add_executable(kolokviumvtor102 "semester1\;/II kol/aud10zad2.cpp")
#add_executable(kolokviumvtor104 "semester1\;/II kol/aud10zad4.cpp")
#add_executable(kolokviumvtor105 "semester1\;/II kol/aud10zad5.cpp")
#add_executable(kolokviumvtor106 "semester1\;/II kol/aud10zad6.cpp")
#add_executable(kolokviumvtor107 "semester1\;/II kol/aud10zad7.cpp")
#add_executable(kolokviumvtor108 "semester1\;/II kol/aud10zad8.cpp")
#add_executable(kolokviumvtor1010 "semester1\;/II kol/aud10zad10.cpp")
#add_executable(kolokviumvtor109 "semester1\;/II kol/aud10zad9.cpp")
#add_executable(kolokviumvtor103 "semester1\;/II kol/aud10zad3.cpp")
#add_executable(kolokviumvtor111 "semester1\;/II kol/aud11zad1.cpp")
#add_executable(kolokviumvtorlab112 "semester1\;/II kol/aud11zad2.cpp")
#add_executable(kolokviumvtorlab113 "semester1\;/II kol/aud11zad3.cpp")
#add_executable(kolokviumvtor121 "semester1\;/II kol/aud12zad1.cpp")
#add_executable(kolokviumvtor122 "semester1\;/II kol/aud12zad2.cpp")
#add_executable(kolokviumvtor123 "semester1\;/II kol/aud12zad3.cpp")
#add_executable(kolokviumvtor124 "semester1\;/II kol/aud12zad4.cpp")
#add_executable(kolokviumvtor125 "semester1\;/II kol/aud12zad5.cpp")
#add_executable(kolokviumvtor125a "semester1\;/II kol/aud12zad5a.cpp")
#add_executable(kolokviumvtor126 "semester1\;/II kol/aud12zad6.cpp")
#add_executable(kolokviumvtor127 "semester1\;/II kol/aud12zad7.cpp")
#add_executable(kolokviumvtor128 "semester1\;/II kol/aud12zad8.cpp")
#add_executable(kolokviumvtorlab71 "semester1\;/II kol/lab7zad1.cpp")
#add_executable(kolokviumvtorlab72 "semester1\;/II kol/lab7zad2.cpp")
#add_executable(kolokviumvtorlab73 "semester1\;/II kol/lab7zad3.cpp")
#add_executable(kolokviumvtorlab62 "semester1\;/II kol/lab6.2.cpp")
#add_executable(kolokviumvtorlab63 "semester1\;/II kol/lab6.3.cpp")
#add_executable(kolokviumvtor7 "semester1\;/II kol/aud8zad7.cpp")
#add_executable(kolokviumvtor8 "semester1\;/II kol/aud8zad8.cpp")
#add_executable(kolokviumvtor91 "semester1\;/II kol/aud9zad1.cpp")
#add_executable(kolokviumvtor92 "semester1\;/II kol/aud9zad2.cpp")
#add_executable(kolokviumvtor93 "semester1\;/II kol/aud9zad3.cpp")
#add_executable(kolokviumvtor94 "semester1\;/II kol/aud9zad4.cpp")
#add_executable(kolokviumnizarev "semester1\;/II kol/reverseniza.cpp")
#add_executable(kolokviumski9 "semester1\;/kol9.cpp")
#add_executable(kolokviumski10 "semester1\;/kol10.cpp")
#add_executable(kolokviumski11 "semester1\;/kol11.cpp")
#add_executable(kolokviunski12 "semester1\;/kol12.cpp")
#add_executable(kolokviunski13 "semester1\;/kol13.cpp")
#add_executable(labratoriski41 "semester1\;/4lab1.cpp")
#add_executable(labratoriski42 "semester1\;/4lab2.cpp"
#add_executable(labratoriski42func "semester1\;/4lab2func.cpp")
#add_executable(labratoriski43 "semester1\;/4lab3.cpp")
#add_executable(labratoriski43func "semester1\;/3lab3func.cpp")
#add_executable(kolokviumski4 "semester1\;/kol4.cpp")
#add_executable(kolokviumskil1 "semester1\;/lkol1.cpp")
#add_executable(kolokviumskil2 "semester1\;/lkol2.cpp")
#add_executable(kolokviumskien2 "semester1\;/enkol2.cpp")
#add_executable(kolokviumskien3 "semester1\;/enkol3.cpp")
#add_executable(kolokviumskien4 "semester1\;/enkol4.cpp")
#add_executable(kolokviumskien5 "semester1\;/enkol5.cpp")
add_executable(kolokvium2mk1 "semester1\;/II kol/kolmk/kolmk1.cpp")
add_executable(kolokvium2mk2 "semester1\;/II kol/kolmk/kolmk2.cpp")
add_executable(kolokvium2mk3 "semester1\;/II kol/kolmk/kolmk3.cpp")
add_executable(kolokvium2mk4 "semester1\;/II kol/kolmk/kolmk4.cpp")
add_executable(kolokvium2mk5 "semester1\;/II kol/kolmk/kolmk5.cpp")
add_executable(kolokvium2mk6 "semester1\;/II kol/kolmk/kolmk6.cpp")
add_executable(kolokvium2mk7 "semester1\;/II kol/kolmk/kolmk7.cpp")
add_executable(kolokvium2mk8 "semester1\;/II kol/kolmk/kolmk8.cpp")
add_executable(kolokvium2mk9 "semester1\;/II kol/kolmk/kolmk9.cpp")
add_executable(kolokvium2mk10 "semester1\;/II kol/kolmk/kolmk10.cpp")
add_executable(kolokvium2mk11 "semester1\;/II kol/kolmk/kolmk11.cpp")
add_executable(kolokvium2mk12 "semester1\;/II kol/kolmk/kolmk12.cpp")
add_executable(kolokvium2mk13 "semester1\;/II kol/kolmk/kolmk13.cpp")
add_executable(kolokvium2mk14 "semester1\;/II kol/kolmk/kolmk14.cpp")
add_executable(kolokvium2mk15 "semester1\;/II kol/kolmk/kolmk15.cpp")
add_executable(kolokvium2mk16 "semester1\;/II kol/kolmk/kolmk16.cpp")
add_executable(kolokvium2mk17 "semester1\;/II kol/kolmk/kolmk17.cpp")
add_executable(kolokvium2mk18 "semester1\;/II kol/kolmk/kolmk18.cpp")
add_executable(kolokvium2mk19 "semester1\;/II kol/kolmk/kolmk19.cpp")
#add_executable(kolokviumvtorlab81 "semester1\;/II kol/lab8zad1.cpp")
#add_executable(kolokviumvtorlab82 "semester1\;/II kol/lab8zad2.cpp")
#add_executable(kolokviumvtorlab83 "semester1\;/II kol/lab8zad3.cpp")
#add_executable(kolokviumvtorlab91 "semester1\;/II kol/lab9zad1.cpp")
#add_executable(kolokviumvtorlab92 "semester1\;/II kol/lab9zad2.cpp")
#add_executable(kolokviumvtorlab93 "semester1\;/II kol/lab9zad3.cpp")
add_executable(kolokvium2mk20231 "semester1\;/II kol/2col2023/k1.cpp")
add_executable(kolokvium2mk20232 "semester1\;/II kol/2col2023/k2.cpp")
add_executable(kolokvium2mk20233 "semester1\;/II kol/2col2023/k3.cpp")
add_executable(kolokvium2mk20234 "semester1\;/II kol/2col2023/k4.cpp")
add_executable(kolokvium2mk20235 "semester1\;/II kol/2col2023/k5.cpp")
add_executable(kolokvium2mk20236 "semester1\;/II kol/2col2023/k6.cpp")
add_executable(kolokvium2mk20237 "semester1\;/II kol/2col2023/k7.cpp")
add_executable(kolokvium2mk20238 "semester1\;/II kol/2col2023/k8.cpp")
add_executable(kolokvium2mk20239 "semester1\;/II kol/2col2023/k9.cpp")
add_executable(kolokvium2mk202310 "semester1\;/II kol/2col2023/k10.cpp")
add_executable(kolokvium2mk202311 "semester1\;/II kol/2col2023/k11.cpp")
add_executable(kolokvium2mk202312 "semester1\;/II kol/2col2023/k12.cpp")
add_executable(kolokvium2dop1 "semester1\;/II kol/dopolnitelnikol2/dop_1.cpp")
add_executable(kolokvium2dop2 "semester1\;/II kol/dopolnitelnikol2/dop_2.cpp")
add_executable(kolokvium2dop3 "semester1\;/II kol/dopolnitelnikol2/dop_3.cpp")
add_executable(kolokvium2dop4 "semester1\;/II kol/dopolnitelnikol2/dop_4.cpp")
add_executable(kolokvium2dop5 "semester1\;/II kol/dopolnitelnikol2/dop_5.cpp")
add_executable(kolokvium2dop6 "semester1\;/II kol/dopolnitelnikol2/dop_6.cpp")
add_executable(kolokvium2dop7 "semester1\;/II kol/dopolnitelnikol2/dop_7.cpp")
add_executable(kolokvium2dop8 "semester1\;/II kol/dopolnitelnikol2/dop_8.cpp")
add_executable(kolokvium2dop9 "semester1\;/II kol/dopolnitelnikol2/dop_9.cpp")
add_executable(kolokvium2dop10 "semester1\;/II kol/dopolnitelnikol2/dop_10.cpp")
add_executable(kolokvium2dop11 "semester1\;/II kol/dopolnitelnikol2/dop_11.cpp")
add_executable(kolokvium2dop12 "semester1\;/II kol/dopolnitelnikol2/dop_12.cpp")
add_executable(kolokviumvtorvvkn "semester1\;/II kol/vvkn.cpp")





